adding acc navigation

--- a/resources/src/sass/accessibility.scss
+++ b/resources/src/sass/accessibility.scss
@@ -4,3 +4,4 @@
 @import "./accessibility/reset";
 @import "./accessibility/menu";
 @import "./accessibility/features";
+@import "./accessibility/navigation";
