--- a/resources/src/sass/accessibility/_reset.scss
+++ b/resources/src/sass/accessibility/_reset.scss
@@ -1,6 +1,7 @@
 .accessibility {
   * {
     box-sizing: border-box;
+    font-family: Arial, sans-serif;
   }
 
   button {
@@ -12,4 +13,35 @@
       font-size: 2rem;
     }
   }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  span.keyboard {
+    display: inline-block;
+    vertical-align: middle;
+
+    kbd {
+      display: inline-block;
+      border: .2em solid;
+      border-radius: .3em;
+      color: #000000;
+      border-color: #ddd #bbb #777 #999;
+      background-color: #fff!important;
+      font-family: monospace;
+      background-image: linear-gradient(to bottom left,#eee,#fff,#eee);
+      padding: .1em .3em;
+      font-weight: 400;
+      vertical-align: bottom;
+    }
+  }
+}
+
+*:active,
+*:focus,
+*:hover {
+  outline: none;
 }
