--- a/resources/src/sass/accessibility/_features.scss
+++ b/resources/src/sass/accessibility/_features.scss
@@ -1,7 +1,7 @@
 html body {
 
   &.accessibility-monochrome {
-    > *:not(.accessibility-menu) {
+    > *:not(.accessibility) {
       filter: grayscale(1);
     }
   }
