--- a/resources/src/sass/accessibility/_menu.scss
+++ b/resources/src/sass/accessibility/_menu.scss
@@ -40,11 +40,12 @@
       position: absolute;
       padding: 10px 30px;
       background: #000000;
+      text-align: center;
 
       h3 {
         margin: 0;
         color: #ffffff;
-        text-align: center;
+        display: inline-block;
       }
 
       .accessibility-menu-close-trigger {
