font accessibility plugin, features working storage current only with cookies

--- a/resources/src/sass/accessibility.scss
+++ b/resources/src/sass/accessibility.scss
@@ -5,3 +5,4 @@
 @import "./accessibility/menu";
 @import "./accessibility/features";
 @import "./accessibility/navigation";
+@import "./accessibility/index-tooltip";
