--- a/resources/src/sass/accessibility/_navigation.scss
+++ b/resources/src/sass/accessibility/_navigation.scss
@@ -20,4 +20,35 @@
       }
     }
   }
+
+  .accessibility-quick-navigation {
+    top: 0;
+    left: 50%;
+    position: fixed;
+    visibility: hidden;
+    text-align: center;
+    transform: translate(-50%, -100%);
+    transition: transform .3s ease;
+
+    .accessibility-quick-navigation-container {
+      background: #ffffff;
+      border: 5px solid rgba(0,0,0,.7);
+      border-top: 0;
+      border-radius: 0 0 10px 10px;
+
+      > ul,
+      > ul li,
+      > button {
+        display: inline-block;
+        vertical-align: middle;
+      }
+
+      > ul li a { display: block; }
+
+      > ul li a,
+      button {
+        padding: 10px;
+      }
+    }
+  }
 }
