--- a/resources/src/sass/accessibility.scss
+++ b/resources/src/sass/accessibility.scss
@@ -6,3 +6,4 @@
 @import "./accessibility/features";
 @import "./accessibility/navigation";
 @import "./accessibility/index-tooltip";
+@import "./accessibility/rtl";
