--- a/resources/src/sass/accessibility/_navigation.scss
+++ b/resources/src/sass/accessibility/_navigation.scss
@@ -1,53 +1,61 @@
-.accessibility-navigation {
+html > body > .accessibility {
+  .accessibility-navigation {
 
-  .accessibility-quick-access {
+    .accessibility-quick-access {
 
-    button {
-      top: 0;
-      color: #fff;
-      position: fixed;
-      background: #000;
-      font-size: 1.5rem;
-      padding: 8px 16px;
-      border-radius: 4px;
-      border: 1px solid #fff;
-      transition: all .3s ease;
-      transform: translateY(-100%);
+      button {
+        top: 0;
+        color: #fff;
+        position: fixed;
+        background: #000;
+        font-size: 1.5rem;
+        padding: 8px 16px;
+        border-radius: 4px;
+        border: 1px solid #fff;
+        transition: all .3s ease;
+        transform: translateY(-100%);
 
-      &:focus {
-        z-index: 999;
-        transform: translateY(0);
+        &:focus {
+          z-index: 999;
+          transform: translateY(0);
+        }
       }
     }
-  }
 
-  .accessibility-quick-navigation {
-    top: 0;
-    left: 50%;
-    position: fixed;
-    visibility: hidden;
-    text-align: center;
-    transform: translate(-50%, -100%);
-    transition: transform .3s ease;
+    .accessibility-quick-navigation {
+      top: 0;
+      left: 50%;
+      position: fixed;
+      visibility: hidden;
+      text-align: center;
+      transform: translate(-50%, -100%);
+      transition: transform .3s ease;
 
-    .accessibility-quick-navigation-container {
-      background: #ffffff;
-      border: 5px solid rgba(0,0,0,.7);
-      border-top: 0;
-      border-radius: 0 0 10px 10px;
+      .accessibility-quick-navigation-container {
+        background: #ffffff;
+        border: 5px solid rgba(0,0,0,.7);
+        border-top: 0;
+        border-radius: 0 0 10px 10px;
 
-      > ul,
-      > ul li,
-      > button {
-        display: inline-block;
-        vertical-align: middle;
-      }
+        > button {
+          i {
+            font-size: 20px;
+          }
+        }
 
-      > ul li a { display: block; }
+        > ul,
+        > ul li,
+        > button {
+          display: inline-block;
+          vertical-align: middle;
+        }
 
-      > ul li a,
-      button {
-        padding: 10px;
+        > ul li a { display: block; }
+
+        > ul li a,
+        button {
+          padding: 10px;
+        }
       }
     }
   }
