--- a/resources/src/fonts/laravel-accessibility.css
+++ b/resources/src/fonts/laravel-accessibility.css
@@ -49,7 +49,7 @@
   content: "\e901";
 }
 .icon-quick-navigation:before {
-  content: "\1f322";
+  content: "\e90f";
 }
 .icon-reset:before {
   content: "\e903";
